--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,17 @@ services:
     image: cassandra:4.1
     container_name: cassandra1
     hostname: cassandra1
+    networks:
+      cassandra_net:
+        ipv4_address: 172.18.0.2
     ports:
       - "9042:9042"
     environment:
       - CASSANDRA_CLUSTER_NAME=TestCluster
-      - CASSANDRA_SEEDS=cassandra1
-      - CASSANDRA_BROADCAST_ADDRESS=auto
+      - CASSANDRA_SEEDS=172.18.0.2
+      - CASSANDRA_BROADCAST_ADDRESS=172.18.0.2
+      - CASSANDRA_LISTEN_ADDRESS=172.18.0.2
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
     volumes:
       - cassandra1_data:/var/lib/cassandra
@@ -17,12 +22,17 @@ services:
     image: cassandra:4.1
     container_name: cassandra2
     hostname: cassandra2
+    networks:
+      cassandra_net:
+        ipv4_address: 172.18.0.3
     depends_on:
       - cassandra1
     environment:
       - CASSANDRA_CLUSTER_NAME=TestCluster
-      - CASSANDRA_SEEDS=cassandra1
-      - CASSANDRA_BROADCAST_ADDRESS=auto
+      - CASSANDRA_SEEDS=172.18.0.2
+      - CASSANDRA_BROADCAST_ADDRESS=172.18.0.3
+      - CASSANDRA_LISTEN_ADDRESS=172.18.0.3
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
     volumes:
       - cassandra2_data:/var/lib/cassandra
@@ -31,18 +41,33 @@ services:
     image: cassandra:4.1
     container_name: cassandra3
     hostname: cassandra3
+    networks:
+      cassandra_net:
+        ipv4_address: 172.18.0.4
     depends_on:
       - cassandra1
       - cassandra2
     environment:
       - CASSANDRA_CLUSTER_NAME=TestCluster
-      - CASSANDRA_SEEDS=cassandra1
-      - CASSANDRA_BROADCAST_ADDRESS=auto
+      - CASSANDRA_SEEDS=172.18.0.2
+      - CASSANDRA_BROADCAST_ADDRESS=172.18.0.4
+      - CASSANDRA_LISTEN_ADDRESS=172.18.0.4
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
     volumes:
       - cassandra3_data:/var/lib/cassandra
+    restart: on-failure
+    # Using a simple delay without calling the entrypoint directly
+    command: bash -c 'sleep 90 && exec /usr/local/bin/docker-entrypoint.sh cassandra -f'
 
 volumes:
   cassandra1_data:
   cassandra2_data:
   cassandra3_data:
+
+networks:
+  cassandra_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
